Added team code and HOMAR and DogeCV libraries

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -10,9 +10,17 @@
 // Custom definitions may go here
 // Include common definitions from above.
 apply from: '../build.common.gradle'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 dependencies {
     /*
      * Other Modules
      */
     implementation project(':FtcRobotController')
+    implementation project(':HOMAR-FTC-Library')
+    implementation 'com.github.dogecv:dogecv:2020.4-alpha'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
