--- a/FtcRobotController/build.gradle
+++ b/FtcRobotController/build.gradle
@@ -60,4 +60,5 @@ dependencies {
      * External
      */
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':HOMAR-FTC-Library')
 }
